# biocrate

./: .gitignore  LICENSE  README.md  pyproject.toml
src/biocrate/: __init__.py  calculators.py  cli.py  constants.py  converter.py  convertors.py  fetch.py  general.py  metrics.py  operators.py
tests/: test_basic.py  test_imports.py
